--- a/app/orderlines/orderlines.component.html
+++ b/app/orderlines/orderlines.component.html
@@ -1,13 +1,18 @@
-<ActionBar title="{{title}}">
+<ActionBar>
+    <StackLayout orientation="horizontal"
+        ios:horizontalAlignment="center"
+        android:horizontalAlignment="center">
+        <Label [text]="title" class="title"></Label>
+    </StackLayout>
     <ActionItem ios.position="left" (tap)="showOrders()"><Label [text]="backIcon" class="icon"></Label></ActionItem>
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
-<StackLayout [visibility]="(loading)?'visible':'collapse'">
-    <Image #img (loaded)="animateBall(img)" src="~/assets/img/ball.png" class="ball"></Image>
+<StackLayout [visibility]="(app.loading)?'visible':'collapse'">
+    <Image #img (loaded)="app.animateLoading(img)" src="~/assets/img/ball.png" class="ball"></Image>
 </StackLayout>
 
-<StackLayout [visibility]="(loading)?'collapse':'visible'">
+<StackLayout [visibility]="(app.loading)?'collapse':'visible'">
     <GridLayout columns="3*,3*,3*,3*" height="50" class="listHeader">
         <Label row="0" col="0" text="Line#"></Label>
         <Label row="0" col="1" text="Item#"></Label>
