Fixed action bar for android

--- a/app/app.android.css
+++ b/app/app.android.css
@@ -26,3 +26,11 @@
     margin-bottom: 15px;
     font-size: 30px;
 }
+
+.actionBarLeftIcon {
+    font-size: 0%;
+}
+
+.actionBarRightIcon {
+    padding-right: 15;
+}
