--- a/app/item/item.component.html
+++ b/app/item/item.component.html
@@ -1,11 +1,11 @@
 <ActionBar>
     <StackLayout orientation="horizontal"
         ios:horizontalAlignment="center"
-        android:horizontalAlignment="center">
-        <Label [text]="title" class="title"></Label>
+        android:horizontalAlignment="left">
+        <Label [text]="title" class="title" (tap)="showOrderLines()"></Label>
     </StackLayout>
-    <ActionItem ios.position="left" (tap)="showOrderLines()"><Label [text]="backIcon" class="icon"></Label></ActionItem>
-    <ActionItem ios.position="right" (tap)="takePicture()"><Label [text]="cameraIcon" class="icon"></Label></ActionItem>
+    <ActionItem ios.position="left" (tap)="showOrderLines()"><Label [text]="backIcon" class="actionBarLeftIcon"></Label></ActionItem>
+    <ActionItem ios.position="right" (tap)="takePicture()"><Label [text]="cameraIcon" class="actionBarRightIcon"></Label></ActionItem>
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
