--- a/app/customers/customers.component.html
+++ b/app/customers/customers.component.html
@@ -1,11 +1,11 @@
 <ActionBar>
     <StackLayout orientation="horizontal"
         ios:horizontalAlignment="center"
-        android:horizontalAlignment="center">
-        <Label [text]="title" class="title"></Label>
+        android:horizontalAlignment="left">
+        <Label [text]="title" class="title" (tap)="signOut()"></Label>
     </StackLayout>
-    <ActionItem ios.position="left" (tap)="signOut()"><Label [text]="exitIcon" class="icon"></Label></ActionItem>
-    <ActionItem ios.position="right" (tap)="changeSort()"><Label [text]="sortIcon" class="icon"></Label></ActionItem>
+    <ActionItem ios.position="left" (tap)="signOut()"><Label [text]="exitIcon" class="actionBarLeftIcon"></Label></ActionItem>
+    <ActionItem ios.position="right" (tap)="changeSort()"><Label [text]="sortIcon" class="actionBarRightIcon"></Label></ActionItem>
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
