--- a/app/signin/signin.component.html
+++ b/app/signin/signin.component.html
@@ -2,7 +2,7 @@
     <StackLayout orientation="horizontal"
         ios:horizontalAlignment="center"
         android:horizontalAlignment="center">
-        <Label text="Sports" class="title"></Label>
+        <Label text="Sports" class="signinTitle"></Label>
     </StackLayout>
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
