--- a/app/signin/signin.component.html
+++ b/app/signin/signin.component.html
@@ -7,7 +7,7 @@
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
-<StackLayout backgroundColor="#EEE" style="padding:30px;">
+<StackLayout backgroundColor="black" style="padding:30px;">
     <Image src="~/assets/img/ball.png" class="signinBall"></Image>
     <TextField id="userName" hint="👤 Username" editable="{{fieldsEnabled}}" class="signinInput" (textChange)="newUsername($event)"></TextField>
     <TextField id="password" hint="🔑 Password" editable="{{fieldsEnabled}}" class="signinInput" (textChange)="newPassword($event)" secure="true"></TextField>
