fixed offline logic

--- a/app/orderlines/orderlines.component.html
+++ b/app/orderlines/orderlines.component.html
@@ -5,6 +5,7 @@
         <Label [text]="title" class="title" (tap)="showOrders()"></Label>
     </StackLayout>
     <ActionItem ios.position="left" (tap)="showOrders()"><Label [text]="backIcon" class="actionBarLeftIcon"></Label></ActionItem>
+    <ActionItem ios.position="right" (tap)="addLine()"><Label [text]="plusIcon" class="actionBarRightIcon"></Label></ActionItem>
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
