--- a/app/orders/orders.component.html
+++ b/app/orders/orders.component.html
@@ -5,6 +5,7 @@
         <Label [text]="title" class="title" (tap)="showCustomers()"></Label>
     </StackLayout>
     <ActionItem ios.position="left" (tap)="showCustomers()"><Label [text]="backIcon" class="actionBarLeftIcon"></Label></ActionItem>
+    <ActionItem ios.position="right" (tap)="addOrder()"><Label [text]="plusIcon" class="actionBarRightIcon"></Label></ActionItem>
     <NavigationButton visibility="collapsed"></NavigationButton>
 </ActionBar>
 
