--- a/app/orders/orders.component.html
+++ b/app/orders/orders.component.html
@@ -14,16 +14,16 @@
 </StackLayout>
 
 <StackLayout [visibility]="(app.loading)?'collapse':'visible'">
-    <GridLayout columns="4*,4*,4*" height="50" class="listHeader">
+    <GridLayout columns="3*,4*,3*" height="50" class="listHeader">
         <Label row="0" col="0" text="Order#"></Label>
         <Label row="0" col="1" text="Date"></Label>
         <Label row="0" col="2" text="Status"></Label>
     </GridLayout>
     <ListView [items]="dsOrder" (itemTap)="showOrderLines($event)" height="100%">
         <ng-template let-dsOrder="item" let-odd="odd">
-        <GridLayout class="list-group-item listEven" columns="4*,4*,4*" [ngClass]="{'listOdd':odd}">
+        <GridLayout class="list-group-item listEven" columns="3*,4*,3*" [ngClass]="{'listOdd':odd}">
             <Label row="0" col="0" [text]="dsOrder.Ordernum"></Label>
-            <Label row="0" col="1" [text]="dsOrder.OrderDate"></Label>
+            <Label row="0" col="1" [text]="dsOrder.formattedDate"></Label>
             <Label row="0" col="2" [text]="dsOrder.OrderStatus"></Label>
         </GridLayout>
         </ng-template>
