--- a/app/app.common.css
+++ b/app/app.common.css
@@ -106,3 +106,21 @@ Button:disabled {
     color: rgb(0, 0, 49);
     font-size: 20;
 }
+.tab {
+    text-align: center;
+    color: white;
+    background-color: black;
+}
+
+.tabSelected {
+    text-align: center;
+    background-color: red;
+}
+
+.customerName {
+    text-align: center;
+    font-size: 22;
+    padding-top: 10;
+    background-color: rgb(196, 251, 255);
+    color: rgb(14, 14, 110);
+}
