--- a/app/app.common.css
+++ b/app/app.common.css
@@ -120,7 +120,9 @@ Button:disabled {
 .customerName {
     text-align: center;
     font-size: 22;
-    padding-top: 10;
+    padding: 10;
     background-color: rgb(196, 251, 255);
     color: rgb(14, 14, 110);
+    border-width: 2px;
+    border-color: white;
 }
