--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -14,33 +14,10 @@
 </StackLayout>
 
 <StackLayout [visibility]="(app.loading)?'collapse':'visible'" backgroundColor="black">
-
-    <!-- Customer tab -->
-    <StackLayout [visibility]="(selectedTab===0)?'visible':'collapse'" backgroundColor="black">
-        <ListView [items]="customerData" height="90%">
-            <ng-template let-customerData="item" let-odd="odd">
-            <GridLayout class="list-group-item listEven" columns="6*,6*">
-                <Label row="0" col="0" [text]="customerData.columnLabel" class="columnLabel"></Label>
-                <Label row="0" col="1" [text]="customerData.columnValue" class="columnValue"></Label>
-            </GridLayout>
-            </ng-template>
-        </ListView>
-    </StackLayout>
-
-    <!-- Order header tab -->
-    <StackLayout [visibility]="(selectedTab===1)?'visible':'collapse'" backgroundColor="black">
-        <ListView [items]="orderData" height="90%">
-            <ng-template let-orderData="item" let-odd="odd">
-            <GridLayout class="list-group-item listEven" columns="6*,6*">
-                <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel"></Label>
-                <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue"></Label>
-            </GridLayout>
-            </ng-template>
-        </ListView>
-    </StackLayout>
+    <Label [text]="Name" class="customerName"></Label>
 
     <!-- Order lines tab -->
-    <StackLayout [visibility]="(selectedTab===2)?'visible':'collapse'" backgroundColor="black">
+    <StackLayout [visibility]="(selectedTab===0)?'visible':'collapse'" backgroundColor="black">
         <StackLayout height="90%">
             <GridLayout columns="3*,3*,3*,3*" height="50" class="listHeader">
                 <Label row="0" col="0" text="Line#"></Label>
@@ -61,10 +38,34 @@
         </StackLayout>
     </StackLayout>
 
+    <!-- Order header tab -->
+    <StackLayout [visibility]="(selectedTab===1)?'visible':'collapse'" backgroundColor="black">
+        <ListView [items]="orderData" height="90%">
+            <ng-template let-orderData="item" let-odd="odd">
+            <GridLayout class="list-group-item listEven" columns="6*,6*">
+                <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel"></Label>
+                <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue"></Label>
+            </GridLayout>
+            </ng-template>
+        </ListView>
+    </StackLayout>
+    
+    <!-- Customer tab -->
+    <StackLayout [visibility]="(selectedTab===2)?'visible':'collapse'" backgroundColor="black">
+        <ListView [items]="customerData" height="90%">
+            <ng-template let-customerData="item" let-odd="odd">
+            <GridLayout class="list-group-item listEven" columns="6*,6*">
+                <Label row="0" col="0" [text]="customerData.columnLabel" class="columnLabel"></Label>
+                <Label row="0" col="1" [text]="customerData.columnValue" class="columnValue"></Label>
+            </GridLayout>
+            </ng-template>
+        </ListView>
+    </StackLayout>
+    
     <!-- tabs -->
     <GridLayout columns="1*,1*,1*" height="10%" top="90%">
-        <Label col="0" text="Customer"   class="icon" (tap)="selectTab(0)" [ngClass]="{'tab':selectedTab!==0,'tabSelected':selectedTab===0}"></Label>
-        <Label col="1" text="Order"  class="icon" (tap)="selectTab(1)" [ngClass]="{'tab':selectedTab!==1,'tabSelected':selectedTab===1}"></Label>
-        <Label col="2" text="Lines"   class="icon" (tap)="selectTab(2)" [ngClass]="{'tab':selectedTab!==2,'tabSelected':selectedTab===2}"></Label>
+        <Label col="0" text="Lines"    class="icon" (tap)="selectTab(0)" [ngClass]="{'tab':selectedTab!==0,'tabSelected':selectedTab===0}"></Label>
+        <Label col="1" text="Order"    class="icon" (tap)="selectTab(1)" [ngClass]="{'tab':selectedTab!==1,'tabSelected':selectedTab===1}"></Label>
+        <Label col="2" text="Customer" class="icon" (tap)="selectTab(2)" [ngClass]="{'tab':selectedTab!==2,'tabSelected':selectedTab===2}"></Label>
     </GridLayout>
 </StackLayout>
