--- a/app/app.common.css
+++ b/app/app.common.css
@@ -64,11 +64,12 @@ Button:disabled {
 }
 
 .appButton {
-    background-color: red;
+    background-color: rgb(20, 20, 214);
     color: white;
-    font-size: 30px;
-    margin-top: 20px;
-    height: 150px;
+    font-size: 25;
+    margin: 10;
+    height: 50;
+    width: 90%;
 }
 
 .signinInput {
@@ -79,6 +80,7 @@ Button:disabled {
     border-width: 2px;
     border-color: white;
     padding: 5px;
+    width: 90%;
 }
 
 .listHeader {
@@ -96,13 +98,13 @@ Button:disabled {
 }
 
 .columnLabel {
-    text-align: right;
     padding-right: 10px;
     color: gray;
     font-size: 20;
 }
 
 .columnValue {
+    text-align: right;
     color: rgb(0, 0, 49);
     font-size: 20;
 }
