--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -40,14 +40,17 @@
 
     <!-- Order header tab -->
     <StackLayout [visibility]="(selectedTab===1)?'visible':'collapse'" backgroundColor="black">
-        <ListView [items]="orderData" height="90%">
-            <ng-template let-orderData="item" let-odd="odd">
-            <GridLayout class="list-group-item listEven" columns="6*,6*">
-                <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel"></Label>
-                <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue"></Label>
-            </GridLayout>
-            </ng-template>
-        </ListView>
+        <StackLayout height="90%">
+            <Button text="Remove Order" class="appButton" (tap)="removeOrder()"></Button>
+            <ListView [items]="orderData">
+                <ng-template let-orderData="item" let-odd="odd">
+                <GridLayout class="list-group-item listEven" columns="6*,6*">
+                    <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel"></Label>
+                    <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue"></Label>
+                </GridLayout>
+                </ng-template>
+            </ListView>
+        </StackLayout>
     </StackLayout>
     
     <!-- Customer tab -->
