--- a/app/customers/customers.component.html
+++ b/app/customers/customers.component.html
@@ -14,6 +14,7 @@
 </StackLayout>
 
 <StackLayout [visibility]="(app.loading)?'collapse':'visible'">
+    <Label text="Here are your customers" class="customersListTitle"></Label>
     <GridLayout columns="2*,11*" height="50" class="listHeader">
         <Label row="0" col="0" text="#"></Label>
         <Label row="0" col="1" text="Customer"></Label>
