--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -39,18 +39,28 @@
     </StackLayout>
 
     <!-- Order header tab -->
-    <StackLayout [visibility]="(selectedTab===1)?'visible':'collapse'" backgroundColor="black">
+    <StackLayout [visibility]="(selectedTab===1 && !showingDatePicker)?'visible':'collapse'" backgroundColor="black">
         <StackLayout height="90%">
             <Button text="Remove Order" class="appButton" (tap)="confirmRemoveOrder()"></Button>
             <ListView id="orderDataList" [items]="orderData">
                 <ng-template let-orderData="item" let-odd="odd" let-index="index">
                 <GridLayout class="list-group-item listEven" columns="6*,6*">
                     <Label row="0" col="0" [text]="orderData.columnLabel" class="columnLabel"></Label>
-                    <TextField row="0" col="1" #input [text]="orderData.columnValue" class="columnValue" (focus)="editOrder({index:index})" (blur)="updateOrder(index,input.text)"></TextField>
+                    <TextField row="0" col="1" #input [text]="orderData.columnValue" class="columnValue" (focus)="editOrder(index)" (blur)="updateOrder(index,input.text)" [visibility]="(orderData.columnLabel && orderData.columnLabel.indexOf('Date')===-1)?'visible':'collapse'"></TextField>
+                    <Label row="0" col="1" [text]="orderData.columnValue" class="columnValue" (tap)="editDate(index)" [visibility]="(orderData.columnLabel && orderData.columnLabel.indexOf('Date')>-1)?'visible':'collapse'"></Label>
                 </GridLayout>
                 </ng-template>
             </ListView>
         </StackLayout>
+    </StackLayout>
+
+    <StackLayout [visibility]="(selectedTab===1 && showingDatePicker)?'visible':'collapse'" backgroundColor="black">
+        <GridLayout columns="1*,3*,1*" height="10%">
+            <Button col="0" text="Cancel" class="editButton" (tap)="cancelEditColumn()"></Button>
+            <Label col="1" [text]="editColumn" class="editColumn"></Label>
+            <Button col="2" text="Done" class="editButton" (tap)="doneEditColumn()"></Button>
+        </GridLayout>
+        <DatePicker height="80%"></DatePicker>
     </StackLayout>
     
     <!-- Customer tab -->
