--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -56,11 +56,11 @@
 
     <StackLayout [visibility]="(selectedTab===1 && showingDatePicker)?'visible':'collapse'" backgroundColor="black">
         <GridLayout columns="1*,3*,1*" height="10%">
-            <Button col="0" text="Cancel" class="editButton" (tap)="cancelEditColumn()"></Button>
+            <Button col="0" text="Cancel" class="editButton" (tap)="cancelEditDate()"></Button>
             <Label col="1" [text]="editColumn" class="editColumn"></Label>
-            <Button col="2" text="Done" class="editButton" (tap)="doneEditColumn()"></Button>
+            <Button col="2" text="Done" class="editButton" (tap)="doneEditDate()"></Button>
         </GridLayout>
-        <DatePicker height="80%"></DatePicker>
+        <DatePicker id="datePicker" height="80%"></DatePicker>
     </StackLayout>
     
     <!-- Customer tab -->
