--- a/app/orderline/orderline.component.html
+++ b/app/orderline/orderline.component.html
@@ -15,12 +15,15 @@
 <StackLayout [visibility]="(app.loading)?'collapse':'visible'" backgroundColor="black">
     <Label [text]="Name" class="customerName"></Label>
     <Button text="Remove Line" class="appButton" (tap)="confirmRemoveLine()"></Button>
-    <ListView id="lineDataList" [items]="lineData" height="90%">
+    <ListView id="lineDataList" [items]="lineData" height="45%">
         <ng-template let-lineData="item" let-odd="odd" let-index="index">
         <GridLayout class="list-group-item listEven" columns="6*,6*">
             <Label row="0" col="0" [text]="lineData.columnLabel" class="columnLabel"></Label>
-            <TextField row="0" col="1" #input [text]="lineData.columnValue" class="columnValue" (focus)="editLine(index)" (blur)="updateLine(index,input.text)"></TextField>
+            <TextField row="0" col="1" #input [text]="lineData.columnValue" class="columnValue" (focus)="editLine(index)" (blur)="updateLine(index,input.text)" [visibility]="(lineData.editable)?'visible':'collapse'"></TextField>
+            <Label row="0" col="1" [text]="lineData.columnValue" class="columnValue" [visibility]="(!lineData.editable)?'visible':'collapse'"></Label>
         </GridLayout>
         </ng-template>
     </ListView>
+    <Image id="itemImage" [visibility]="(ttOrderLine.base64Image)?'visible':'collapse'"></Image>
+    <Image src="~/assets/img/nophoto.png" [visibility]="(!ttOrderLine.base64Image)?'visible':'collapse'"></Image>    
 </StackLayout>
