--- a/app/orderdetail/orderdetail.component.html
+++ b/app/orderdetail/orderdetail.component.html
@@ -36,9 +36,9 @@
     <!-- Date Picker for order date fields -->
     <StackLayout [visibility]="(selectedTab===0 && showingDatePicker)?'visible':'collapse'" backgroundColor="black">
         <GridLayout columns="1*,3*,1*" height="10%">
-            <Button col="0" text="Cancel" class="editButton" (tap)="cancelEditDate()"></Button>
+            <Button col="0" [text]="cancelIcon" class="redIcon" (tap)="cancelEditDate()"></Button>
             <Label col="1" [text]="editColumn" class="editColumn"></Label>
-            <Button col="2" text="Done" class="editButton" (tap)="doneEditDate()"></Button>
+            <Button col="2" [text]="doneIcon" class="greenIcon" (tap)="doneEditDate()"></Button>
         </GridLayout>
         <DatePicker id="datePicker" height="80%"></DatePicker>
     </StackLayout>
